feat: Added appropriate help text.
fix: Fixed adding book to bookshelf